alignment issue fixed

--- a/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
@@ -30,7 +30,7 @@
 }
 
 .card-header-title {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   flex-grow: unset;
 }
 
