--- a/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
@@ -12,7 +12,7 @@
 }
 
 .card-header-title {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.75rem;
     flex-grow: unset;
 }
 
